[metadata]
name = message
version = 2015.12.1
summary = Highlander Monitoring Agent Project
description-file =
    README.rst
license = Apache License, Version 2.0
home-page = https://launchpad.net/highlander
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
author =  Highlander Team
author-email = aneesh.puttur@gmail.com

[files]
packages =
    highlander_monitor



[entry_points]
console_scripts =
    highlander-monitoring-agent = highlander_monitor.cmd.launch:main
    highlander-monitoring-register = highlander_monitor.cmd.agent_register:main


